@@ -3,6 +3,8 @@
 2006-03-05
 	* Added patch to make $cpu stuff work on alpha (thanks Thomas Cort)
 	http://bugs.gentoo.org/show_bug.cgi?id=122637#c3
+	* Stop using override_redirect true -- conky back under WM control
+	when using 'own_window yes'.
 
 2006-02-14
 	* Drastically simplified own_window=yes window creation code.
